# jentic-api-scorecard

./: .gitignore  .lintstagedrc.json  CHANGELOG.md  NOTICE  README.md  action.yml  eslint.config.js  lerna.json  package-lock.json  package.json  tsconfig.base.json
.claude/: CLAUDE.md  settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: eslint-fix.sh  typescript-check.sh
.claude/rules/: cli-readme-sync.md  conventional-commits.md  testing.md  typescript-code-style.md  update-tech-stack-on-deps.md  worktrees.md
.claude/skills/review-community/: SKILL.md
.claude/skills/sdd-create-constitution/: SKILL.md
.claude/skills/sdd-distill-lessons/: SKILL.md
.github/workflows/: action-selftest.yml  ci.yml  codeql.yml  docker-publish.yml  docker-security.yml  publish-to-docs.yaml  publish-to-docs.yml  rebuild-alpha-29.yml  release.yml  skill-security.yml
.husky/: commit-msg
action/: package.json  postprocess.mjs
agents/: jentic-api-improve.md
docker/: Dockerfile  pyproject.toml
docker/.build/: sample.yaml
docker/src/jentic_scorecard_runner/: __init__.py  __main__.py  exit_codes.py  gate.py  score.py  usage.py
docker/src/jentic_scorecard_runner/score/: __init__.py  runner.py
docker/tests/: test_gate.py  test_integration.py  test_main.py
docs/: architecture.md  improve-cost-benchmark.md  llm-signals.md  publish-config.json  supply-chain-docker.md  supply-chain-npm.md
scripts/: bench-improve.data.json  bench-improve.js  bench-improve.sample.json  extract-docs.js  publish-to-docs.sh  token-proxy.mjs
skills/jentic-api-improve/: SKILL.md
skills/jentic-api-scorecard/: SKILL.md
specs/: mission.md  roadmap.md  tech-stack.md
specs/2026-05-25-with-llm-plumbing/: plan.md  requirements.md  validation.md
specs/2026-06-15-github-action-ci-scoring/: plan.md  requirements.md  retrospective.md  validation.md
specs/2026-06-15-markdown-formatter/: plan.md  requirements.md  retrospective.md  validation.md
specs/2026-06-15-sarif-formatter/: plan.md  requirements.md  retrospective.md  validation.md
specs/2026-06-19-sarif-source-line-mapping/: plan.md  requirements.md  retrospective.md  validation.md
specs/2026-06-24-runner-http-server-mode/: plan.md  requirements.md  validation.md
specs/2026-06-30-jentic-api-improve-skill/: plan.md  requirements.md  retrospective.draft.md  validation.md
specs/2026-07-05-benchmark-improve-cost/: plan.md  requirements.md  retrospective.draft.md  validation.md
specs/2026-07-14-jentic-api-improve-change-scope-modes/: plan.md  requirements.md  validation.md
(+10 files in other folders)
