[project]
name = "jentic-scorecard-runner"
version = "0.1.0"
description = "Container-internal runner for jentic-api-scorecard"
requires-python = ">=3.12"
dependencies = [
    "jentic-apitools-pipelines==1.0.0a18",
    "jentic-apitools-common==1.0.0a18",
    "requests>=2.34.2,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10",
    "pytest-httpserver>=1.1,<2",
    "ruff>=0.15.20,<0.16.0",
    "poethepoet>=0.47.0,<0.48",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "PLC0415", "PLC2701"]
preview = true
explicit-preview-rules = true

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.poe.tasks.lint]
sequence = [
  { cmd = "ruff check" },
  { cmd = "ruff format --check --diff" },
]

[tool.poe.tasks."lint:ci"]
sequence = [
  { cmd = "ruff check --output-format=github" },
  { cmd = "ruff format --check --diff" },
]

[tool.poe.tasks."lint:fix"]
sequence = [
  { cmd = "ruff check --fix" },
  { cmd = "ruff format" },
]

[tool.poe.tasks.test]
cmd = "pytest -v ${target} --tb=short"
args = [{name = "target", default = "tests", positional = true}]
env = { PYTHONPATH = "src" }

[tool.pytest.ini_options]
testpaths = ["tests"]
